[tool.poetry]
name = "cpsc789-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
airsim = "^1.3.0"
matplotlib = "^3.3.4"
vg = "^1.9.0"
scipy = "^1.6.1"
pylint = "^2.7.2"
rope = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
